test/fail_compilation/fail4245e.d
// 4245
void fail4245()
{
    {
        enum Foo { A, }
    }
    {
        enum Foo { A, }
    }
}
